<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyHeartClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open">开始</string>
    <string name="close">结束</string>
    <string name="success">已发送</string>
    <string name="fail">发送失败</string>
    <string name="check">查看历史记录</string>
    <string name="checkRecent">显示最近消息</string>
    <string name="login_label_username">帐号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登 录</string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="login_username_hint">用户名</string>
    <string name="login_register_link">没有帐号？ <a href="#">注册</a></string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="registerwelcome">欢迎来到注册页面</string>
    <string name="username">用  户  名：</string>
    <string name="userpswd">密           码：</string>
    <string name="userrepswd">确认密码：</string>
    <string name="usermobile">手机号码：</string>
    <string name="btn_register">注册</string>
    <string name="btn_return">返回</string>
    <string name="showPie">图表查看</string>

</resources>
